feat(Mixin): 使每个插件的 mixin 配置都使用唯一标识符, 避免重名